--- a/applications.html
+++ b/applications.html
@@ -37,7 +37,7 @@
 
             <img
               src="https://yt3.ggpht.com/ytc/AKedOLTlGVLrXzgZDwItF-m8Tux0NF5II9C-TIa6HgIalg=s900-c-k-c0x00ffffff-no-rj"
-              alt="Avatar" vertical-align=middle; border-radius=50%; width="8D0px" height="8D0px" class="avatar" />
+              alt="Avatar" vertical-align=middle; border-radius=50%; width="80px" height="80px" class="avatar" />
             <h4 class="mt-2">Abdul Jabbar</h4>
             <p class="text-black-50 fw-bold mb-1" style="font-size:11px">User ID: WEB4-2844</p>
             <button class="btn btn-secondary btn-outline btn-sm">View Profile</button>
